--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./img/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="css/style.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+        integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/homepage.css">
     <title>MeetCord</title>
 </head>
 
 <body>
+    <header class="container">
+        <h1><i class="fas fa-comments"></i>&nbsp;Meet-Cord</h1>
+    </header>
     <div class="centered-form">
         <div class="centered-form__box">
             <h1>Join</h1>
@@ -23,6 +30,9 @@
             </form>
         </div>
     </div>
+    <footer class="foot">
+        Created with 🧡 by &nbsp;<a href="https://www.linkedin.com/in/tushar-singh-156735192/">Tushar Singh</a>
+    </footer>
 </body>
 
 </html>
