--- a/public/chat.html
+++ b/public/chat.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./img/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="css/style.min.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>MeetCord</title>
 </head>
 
@@ -23,7 +23,7 @@
                     <input name="message" placeholder="Message" required autocomplete="off">
                     <button>Send</button>
                 </form>
-                <button id="send-location">Send location</button>
+                <button id="send-location">Share location</button>
             </div>
         </div>
     </div>
@@ -31,7 +31,7 @@
     <script id="message-template" type="text/html">
         <div class="message">
             <p>
-                <span class="message__name">{{username}}</span>
+                <span class="message__name"><b>{{username}}</b></span>
                 <span class="message__meta">{{createdAt}}</span>
             </p>
             <p>{{message}}</p>
@@ -41,7 +41,7 @@
     <script id="location-message-template" type="text/html">
         <div>
             <p>
-                <span class="message__name">{{username}}</span>
+                <span class="message__name"><b>{{username}}</b></span>
                 <span class="message__meta">{{createdAt}}</span>
             </p>
             <p><a href="{{location}}" target="_blank">My current location</a></p>
@@ -49,8 +49,9 @@
     </script>
 
     <script id="sidebar-template" type="text/html">
-        <h2 class="room-title">{{room}}</h2>
-        <h3 class="list-title">Users</h3>
+        <h2 class="room-title"><b>Room Name</b> {{room}}</h2>
+        <hr>
+        <h3 class="list-title"><b>Users in Room</b></h3>
         <ul class="users">
             {{#users}}
                 <li>{{username}}</li>
