--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,8 @@
         </div>
     </div>
     <footer class="foot">
-        Created with 🧡 by &nbsp;<a href="https://www.linkedin.com/in/tushar-singh-156735192/">Tushar Singh</a>
+        Created with 🧡 by &nbsp;<a href="https://www.linkedin.com/in/prakhar-kumar-singh-b3304a20a/"
+            target="_blank">Prakhar Singh</a>
     </footer>
 </body>
 
