--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
     </div>
     <footer class="foot">
         Created with 🧡 by &nbsp;<a href="https://www.linkedin.com/in/prakhar-kumar-singh-b3304a20a/"
-            target="_blank">Prakhar Singh</a>
+            target="_blank">Tushar Singh</a>
     </footer>
 </body>
 
